Build ffmpeg with MSVC using C89 conversion.
Using Ronald's libclang based converter, we're able to translate
ffmpeg from C99 to C89 syntax and compile through MSVC++! This is
awesome for many reasons:
- Better performance! MSVC compiled code is as fast as some of the
hand rolled assembly in certain cases (per rbultje).
- Debugging symbols! (!!!) Crash dumps will now be symbolized with
all symbols instead of the missing symbols traces we get in crash
reports today.
- No more hand rolling binaries every time ffmpeg needs a security
fix or someone wants to make a change!
- Greatly reduced binary size, the Chrome DLLs are ~3.2mb smaller
and the Chromium DLLs ~2.3mb smaller: Chrome: 5205049 -> 1817600,
Chromium: 3587185 -> 1147904.

Pre-work that was necessary to get the process started:
- build_ffmpeg.sh now uses the --toolchain=msvc flag instead of
mingw.  It's needed now only for pre-generated config headers.
- generate_gyp.py now breaks the source listing out into 3 groups:
"c_sources", "asm_sources", and "msvc_outputs".  Required so GYP
can identify all of our inputs and outputs.  Sadly I couldn't find
a way to do string processing in GYP, so ffmpeg_generated.gypi is
now extremely verbose.
- inttypes.h needed to be upgraded to the latest version, taken
from the http://code.google.com/p/msinttypes/
- generate_stubs.py needed an upgrade to support .DEF generation
for symbol exports. CL here: http://codereview.chromium.org/11027054/
- Semi-related: copy_config.sh will now version avconfig.h since
it seems to differ on ARM vs X86 platforms.
- Sigs files are now collapsed into a single signature to get rid
of the avcodec-## nonsense and simplify media library imports.
- Split yasm steps out into new "ffmpeg_yasm" target to avoid code
duplication.

The rough outline of the new process is as follows:
- The "convert_ffmpeg_sources" gyp target calls "c99conv.py" which
runs the preprocessor (w/ GOMA if available) and then converts the
preprocessed output into C89 form under 

--- a/.gitignore
+++ b/.gitignore
@@ -61,8 +61,8 @@
 
 # Chromium stuff.
 /chromium/binaries/Chrome
-/ffmpeg.props
-/ffmpeg.sln
-/ffmpeg.targets
-/ffmpeg.vcxproj*
-/ffmpeg.xml
+/*.props
+/*.sln
+/*.targets
+/*.vcxproj*
+/*.xml
