doc: Add auto-generated Wayland Library chapter
For now only Wayland Client API is described on that chapter, which is
extracted via doxygen on ./src/wayland-client.h. We apply a stylesheet
(doxygen-to-publican) on doxygen output so it becomes docbook valid.

Now all we need to do is populate that header while developing in order to
grow a decent documentation. So please use it!

Signed-off-by: Tiago Vignatti <tiago.vignatti@intel.com>

--- a/configure.ac
+++ b/configure.ac
@@ -78,6 +78,11 @@ AM_CONDITIONAL([HAVE_XSLTPROC], [test "x$XSLTPROC" != "x"])
 
 if test "x$enable_documentation" = "xyes"; then
 	AC_PATH_PROG(PUBLICAN, publican)
+
+	AC_CONFIG_FILES([
+	doc/doxygen/wayland.doxygen
+	])
+
 fi
 AM_CONDITIONAL([HAVE_PUBLICAN], [test "x$PUBLICAN" != "x"])
 
@@ -88,6 +93,7 @@ AC_CONFIG_FILES([Makefile
 		 cursor/wayland-cursor-uninstalled.pc
 		 doc/Makefile
 		 doc/Wayland/Makefile
+		 doc/doxygen/Makefile
 		 doc/man/Makefile
 		 src/Makefile
 		 src/wayland-server-uninstalled.pc
