configure: Make documentation option work in fact
Also, now doxygen is mandatory for building the documentation (looks
reasonable because both man-pages and publican will need it).

Signed-off-by: Tiago Vignatti <tiago.vignatti@intel.com>

--- a/configure.ac
+++ b/configure.ac
@@ -43,7 +43,7 @@ AC_CHECK_FUNCS([accept4 mkostemp])
 
 AC_ARG_ENABLE([scanner],
               [AC_HELP_STRING([--disable-scanner],
-                              [Disable compilation of wayland-scannner])],
+                              [Disable compilation of wayland-scanner])],
               [],
               [enable_scanner=yes])
 
@@ -76,7 +76,14 @@ fi
 AC_PATH_PROG(XSLTPROC, xsltproc)
 AM_CONDITIONAL([HAVE_XSLTPROC], [test "x$XSLTPROC" != "x"])
 
+AM_CONDITIONAL(BUILD_DOCS, [test x$enable_documentation = xyes])
 if test "x$enable_documentation" = "xyes"; then
+	AC_PATH_PROG(DOXYGEN, doxygen)
+
+	if test "x$DOXYGEN" = "x"; then
+		AC_MSG_ERROR([Documentation build requested but doxygen not found. Install doxygen or disable the documentation using --disable-documentation])
+	fi
+
 	AC_PATH_PROG(PUBLICAN, publican)
 
 	AC_CONFIG_FILES([
