--- a/fc-query/Makefile.am
+++ b/fc-query/Makefile.am
@@ -39,6 +39,8 @@ endif
 
 EXTRA_DIST=fc-query.sgml $(BUILT_MANS)
 
+CLEANFILES =
+
 fc_query_LDADD = ${top_builddir}/src/libfontconfig.la
 
 if USEDOCBOOK
@@ -50,10 +52,7 @@ ${man_MANS}: ${SGML}
 
 all-local: $(man_MANS)
 
-clean-local:
-	$(RM) $(man_MANS)
-
+CLEANFILES += ${man_MANS}
 else
 all-local:
-clean-local:
 endif
