xwayland: modify Makefile.am to clean up BUILD_SOURCES

--- a/src/xwayland/Makefile.am
+++ b/src/xwayland/Makefile.am
@@ -33,4 +33,6 @@ BUILT_SOURCES =					\
 	xserver-protocol.c			\
 	xserver-server-protocol.h
 
+CLEANFILES = $(BUILT_SOURCES)
+
 @wayland_scanner_rules@
