build: Add wayland-scanner.pc.
To allow user program to include wayland-scanner.m4 in tarball, move
the path variables from it into wayland-scanner.pc.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -57,6 +57,9 @@ wayland_scanner_SOURCES =				\
 wayland_scanner_LDADD = $(EXPAT_LIBS) libwayland-util.la
 
 $(BUILT_SOURCES) : wayland-scanner
+
+scannerpkgconfigdir = $(datadir)/pkgconfig
+scannerpkgconfig_DATA = wayland-scanner.pc
 endif
 
 BUILT_SOURCES =					\
