Handle process names, labels, and finally process and thread sort indices
This allows us to show process names, tab names in about:tracing, finally,
and in a predictable manner.

R=dsinclair@chromium.org
BUG=9,179

Review URL: https://codereview.appspot.com/10685045

Former-commit-id: 350d96a707bbba15f43c92713db28cb727667784

--- a/src/about_tracing.html.template
+++ b/src/about_tracing.html.template
@@ -7,6 +7,7 @@ found in the LICENSE file.
 -->
 <WARNING_MESSAGE></WARNING_MESSAGE>
 <head i18n-values="dir:textdirection;">
+<title>chrome://tracing</title>
 <style>
 html, body {
   height: 100%;
