cbuildbot_config: ivybridge group: link !variant
Accidentally added 'link' as a variant board, not a standard group
board. This fixes the problem.

BUG=None
TEST=`./cbuildbot/cbuildbot_config_unittest.py`, config
  - Config properly marks 'link' group build with "chrome_sdk=True".

Change-Id: I78766c2783572db7c42abababcdbe85e2b243396
Reviewed-on: https://chromium-review.googlesource.com/241110
Commit-Queue: Daniel Jacques <dnj@chromium.org>
Tested-by: Daniel Jacques <dnj@chromium.org>
Reviewed-by: Mike Frysinger <vapier@chromium.org>

--- a/cbuildbot/config_dump.json
+++ b/cbuildbot/config_dump.json
@@ -16770,6 +16770,7 @@
                 ],
                 "build_packages_in_background": true,
                 "build_type": "full",
+                "chrome_sdk": true,
                 "chrome_sdk_build_chrome": false,
                 "chroot_replace": true,
                 "description": "Full Builds",
@@ -16891,6 +16892,7 @@
                 ],
                 "build_packages_in_background": true,
                 "build_type": "canary",
+                "chrome_sdk": true,
                 "chrome_sdk_build_chrome": false,
                 "chromeos_official": true,
                 "chroot_replace": true,
