Add //base dep to stubs target
The ffmpeg stubs targets uses base's logging functionality, so it
should declare a dependency on it. The gyp build does so here:

https://code.google.com/p/chromium/codesearch#chromium/src/third_party/ffmpeg/ffmpeg.gyp&l=558

Change-Id: Ie4e7fdec2f98c56af24f4848229243a64a63d347

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -275,7 +275,10 @@ if (build_ffmpegsumo) {
         "-Wl,-Bsymbolic",
         "-L", rebase_path(target_gen_dir, root_build_dir),
       ]
-      libs = [ "z" ]
+      libs = [
+        "m",
+        "z",
+      ]
 # TODO(ajwong): How to handle openbsd? Especially w/o the is_posix?
 #      if (is_openbsd) {
 #       # OpenBSD's gcc (4.2.1) does not support this flag
@@ -446,6 +449,10 @@ if (is_win) {
     ]
 
     public_configs = [ ":ffmpeg_posix_dependent_config" ]
-    deps = [ ":ffmpeg_generate_stubs", ":ffmpegsumo" ]
+    deps = [
+      ":ffmpeg_generate_stubs",
+      ":ffmpegsumo",
+      "//base",  # ffmpeg_stubs use base's logging functionality
+    ]
   }
 }
