Add -lrt to link line, precise needs it for clock_gettime
Change-Id: I78bd3466d5b36b5e8b30954bada8774932d53fef

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -277,6 +277,7 @@ if (build_ffmpegsumo) {
       ]
       libs = [
         "m",
+        "rt",  # for clock_gettime on precise
         "z",
       ]
 # TODO(ajwong): How to handle openbsd? Especially w/o the is_posix?
