Makefile.am: Use fine-grained dist control for desktop file

--- a/Makefile.am
+++ b/Makefile.am
@@ -156,10 +156,9 @@ endif # BUILD_WESTON_LAUNCH
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = src/weston.pc
 
-EXTRA_DIST += $(wayland_session_DATA)
-
 wayland_sessiondir = $(datadir)/wayland-sessions
 wayland_session_DATA = src/weston.desktop
+dist_wayland_session_DATA += $(wayland_session_DATA)
 
 westonincludedir = $(includedir)/weston
 westoninclude_HEADERS =				\
