--- a/Makefile.am
+++ b/Makefile.am
@@ -158,7 +158,7 @@ pkgconfig_DATA = src/weston.pc
 
 wayland_sessiondir = $(datadir)/wayland-sessions
 wayland_session_DATA = src/weston.desktop
-dist_wayland_session_DATA += $(wayland_session_DATA)
+dist_wayland_session_DATA = $(wayland_session_DATA)
 
 westonincludedir = $(includedir)/weston
 westoninclude_HEADERS =				\
