Split out ThreadSlice to a separate file
Former-commit-id: d3fe354a245c4f2ea6549e39d1bc76246f7780fc

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -158,6 +158,7 @@ tracing_js_html_files = [
   "trace_viewer/core/trace_model/slice_group.html",
   "trace_viewer/core/trace_model/stack_frame.html",
   "trace_viewer/core/trace_model/thread.html",
+  "trace_viewer/core/trace_model/thread_slice.html",
   "trace_viewer/core/trace_model/thread_time_slice.html",
   "trace_viewer/core/trace_model/time_to_object_instance_map.html",
   "trace_viewer/core/trace_model/timed_event.html",
