Revert "Remove protocol/wayland.dtd"
This reverts commit 06fb8bd371403d43bc192577abd6b0a0c8b29c59.

Having a DTD hooked up gives an indication of what we expect the protocol to
be, which is a clearer documentation than the current "whatever scanner.c
manages to parse".

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
Reviewed-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,8 +16,8 @@ dist_aclocal_DATA = wayland-scanner.m4
 
 dist_pkgdata_DATA =				\
 	wayland-scanner.mk			\
-	protocol/wayland.xml
-
+	protocol/wayland.xml			\
+	protocol/wayland.dtd
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA =
