[perf-insights] Added a config object to override hardcoded config defaults.
This lets us run other instances of the cloud-mapper, to more easily do parallell work and testing.

TBR=simonhatch@chromium.org

Review URL: https://codereview.chromium.org/1440043003 .


Former-commit-id: bf4b66877dfed98f3d347f8029c8002de2dc5a7f

--- a/perf_insights/app.yaml
+++ b/perf_insights/app.yaml
@@ -35,6 +35,6 @@ handlers:
   script: perf_insights.endpoints.cloud_mapper.task.app
   secure: always
 
-env_variables:
-  # Comment out the next line to use the appengine default bucket.
-  GCS_BUCKET_NAME: 'performance-insights'
+- url: /cloud_mapper/test
+  script: perf_insights.endpoints.cloud_mapper.test.app
+  secure: always
