--- a/perf_insights/app.yaml
+++ b/perf_insights/app.yaml
@@ -22,19 +22,24 @@ handlers:
 - url: /cloud_mapper/create
   script: perf_insights.endpoints.cloud_mapper.create.app
   secure: always
+  login: admin
 
 - url: /cloud_mapper/status
   script: perf_insights.endpoints.cloud_mapper.status.app
   secure: always
+  login: admin
 
 - url: /cloud_mapper/cancel
   script: perf_insights.endpoints.cloud_mapper.cancel.app
   secure: always
+  login: admin
 
 - url: /cloud_mapper/task
   script: perf_insights.endpoints.cloud_mapper.task.app
   secure: always
+  login: admin
 
 - url: /cloud_mapper/test
   script: perf_insights.endpoints.cloud_mapper.test.app
   secure: always
+  login: admin
